--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="hyperDrive">
+<html ng-app="agileApp">
 <head>
 	<title>Landing page</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
